--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -1,13 +1,29 @@
-name: attackflow.yml
+name: pushdocs.yml
 
 on: 
-    push: 
-        branches: 
-            - attackspeed
+ push: 
+  branches: 
+   - attackspeed
+   - gh-pages
             
 jobs: 
-    build: 
-        runs-on: ubuntu-latest
-        steps: 
-            - uses: actions/chechout@v2
-            - run: g++ -std=c++11 *.cpp -o main -w
+ build: 
+  deploy: 
+   name: Deploy to github pages
+   runs-on: ubuntu-latest
+   steps:
+    - uses: actions/chechout@attackspeed
+    
+    - run: sudo apt-get install doxygen
+    - run: sudo apt-get install graphviz
+    - run: doxygen doxconfig.txt
+    
+    - name: Push git subdir as branch
+    
+   uses: s0/git-publish-subdir-action@v2.4.0
+   
+   env:
+    REPO: self
+    BRANCH: gh-pages
+    FOLDER: DOCS/html
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
