--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -1,22 +1,22 @@
 name: pushdocs.yml
 
-on: 
-    push: 
-        branches: 
-         - attackspeed
-         - gh-pages
-            
-jobs: 
-    deploy: 
+on:
+    push:
+        branches:
+            - attackspeed
+            - gh-pages
+
+jobs:
+    deploy:
         name: Deploy to github pages
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/chechout@attackspeed
-       
+        - uses: action/chechout@attackspeed
+
         - run: sudo apt-get install doxygen
         - run: sudo apt-get install graphviz
         - run: doxygen doxconfig.txt
-       
+        
         - name: Push git subdir as branch
           
         uses: s0/git-publish-subdir-action@v2.4.0
