--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -1,4 +1,4 @@
-name: pushdocs.yml
+name: pushdocs workflow
 
 on:
     push:
@@ -11,7 +11,7 @@ jobs:
         name: Deploy to github pages
         runs-on: ubuntu-latest
         steps:
-        - uses: action/chechout@attackspeed
+        - uses: action/checkout@attackspeed
 
         - run: sudo apt-get install doxygen
         - run: sudo apt-get install graphviz
