--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -15,7 +15,7 @@ jobs:
 
         - run: sudo apt-get install doxygen
         - run: sudo apt-get install graphviz
-        - run: doxygen doxconfig.txt
+        - run: doxygen doxconf
         
         - name: Push git subdir as branch
           
