--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -11,7 +11,7 @@ jobs:
     name: Deploy to github pages
     runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@attackspeed
+    - uses: actions/checkout@attackspeed
 
     - run: sudo apt-get install doxygen
     - run: sudo apt-get install graphviz
