--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -17,6 +17,7 @@ jobs:
     - run: sudo apt-get install graphviz
     - run: doxygen doxconf
 
+  job2:
     name: Push git subdir as branch
     uses: s0/git-publish-subdir-action@v2.4.0
 
