--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -4,14 +4,13 @@ on:
   push:
     branches:
       - attackspeed
-      - gh-pages
 
 jobs:
   deploy:
     name: Deploy to github pages
     runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@attackspeed
+    - uses: actions/checkout@attackspeed
 
     - run: sudo apt-get install doxygen
     - run: sudo apt-get install graphviz
