--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -16,8 +16,7 @@ jobs:
     - run: sudo apt-get install graphviz
     - run: doxygen doxconf
 
-    - name: Push git subdir as branch
-      uses: s0/git-publish-subdir-action@v2.4.0
+    - uses: s0/git-publish-subdir-action@v2.4.0
 
     env:
       REPO: self
