--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - attackspeed
+      - gh-pages
 
 jobs:
   deploy:
@@ -16,7 +17,8 @@ jobs:
     - run: sudo apt-get install graphviz
     - run: doxygen doxconf
 
-    - uses: s0/git-publish-subdir-action@v2.4.0
+    - name: Push git subdir as branch
+    uses: s0/git-publish-subdir-action@v2.4.0
 
     env:
       REPO: self
