--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install cppcheck and valgrind
         run: sudo apt install -y cppcheck && sudo apt install -y valgrind 
       - name: Running code analysis with cppcheck
-        run: cppcheck *.cpp --enable=all --output-file=cppcheck_expected_output.txt && chmod +x check_for_warning.sh && ./check_for_warning.sh && chmod +x check_for_error.sh && ./check_for_error.sh
+        run: cppcheck *.cpp --enable=all --output-file=cppcheck_expected_output.txt && chmod +x warningcheck.sh && ./warningcheck.sh && chmod +x errorcheck.sh && ./errorcheck.sh
       - name: Upload Cppcheck result 
         uses: actions/upload-artifact@v2  
         with:
