--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -8,11 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install cppcheck and valgrind
         run: sudo apt install -y cppcheck && sudo apt install -y valgrind 
+      - name: Running code analysis with cppcheck
         run: cppcheck *.cpp --enable=all --output-file=cppcheck_expected_output.txt && chmod +x warningcheck.sh && ./warningcheck.sh && chmod +x errorcheck.sh && ./errorcheck.sh
+      - name: Upload Cppcheck result 
         uses: actions/upload-artifact@v2  
         with:
+          name: cppcheck_expected_output
           path: cppcheck_expected_output.txt
-        run: g++ -Wall -Werror -Wextra -std=c++17 *.cpp -o a.out
+      - name: build
+        run: g++ -Wall -Werror -Wextra -std=c++17 *.cpp 
+      - name: Valgrind check
         run: valgrind --error-exitcode=1 ./a.out units/Kakarott.json units/Sally.json
+      - name: In-out tests
         run: chmod +x test.sh && ./task2_test.yml
