--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: build
         run: g++ -Wall -Werror -Wextra -std=c++17 *.cpp 
       - name: Valgrind check
-        run: valgrind --error-exitcode=1 ./a.out units/Kakarott.json units/Sally.json
+        run: valgrind --error-exitcode=1 ./a.out units/unit_test_1.json units/unit_test_2.json units/unit_test_3.json
       - name: In-out tests
-        run: chmod +x test.sh && ./task2_test.yml
+        run: chmod +x task2.sh && ./task2.sh
