--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: build
         run: g++ -Wall -Werror -Wextra -std=c++17 *.cpp 
       - name: Valgrind check
-        run: valgrind --leak-check=full --error-exitcode=1 ./a.out units/unit_test_1.json units/unit_test_2.json 
+        run: valgrind --leak-check=full --error-exitcode=1 ./a.out units/Player_1_Kakarott.json units/Player_2_Sally.json 
       - name: In-out tests
         run: chmod +x task2.sh && ./task2.sh
