--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -12,5 +12,5 @@ jobs:
         run: g++ -std=c++17 *.cpp
       - name: Run task2 shell script
         run: ./tests/task2.sh
-      - name: Compare native_output.txt with ../units/good_output.txt
-        run: diff native_output.txt ../units/good_output.txt
+      - name: Compare tests/native_output.txt with ../units/good_output.txt
+        run: diff tests/native_output.txt ../units/good_output.txt
