--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Run task2 shell script
         run: ./tests/task2.sh
       - name: Compare tests/native_output.txt with ../units/good_output.txt
-        run: diff native_output.txt units/good_output.txt
+        run: diff ../native_output.txt units/good_output.txt
