--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the program
-        run: sudo apt-get install gcc-8 g++-8
+        run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 0 --slave /usr/bin/g++ g++ /usr/bin/g++-8
+
       - name: Run task2 shell script
         run: ./task2.sh
       - name: Compare native_output.txt with units/good_output.txt
