Updated g++ and gcc line version #2

--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the program
+      - name: Update gcc/g++ version manually
         run: sudo apt-get install gcc-8 g++-8
- g++ -std=c++17 *.cpp
+      - name: Build the program
+	run: g++ -std=c++17 *.cpp
       - name: Run task2 shell script
         run: ./task2.sh
       - name: Compare native_output.txt with units/good_output.txt
