--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install cppcheck and valgrind
         run: sudo apt install -y cppcheck && sudo apt install -y valgrind 
       - name: Running code analysis with cppcheck
-        run: cppcheck *.cpp --enable=all --output-file=cppcheck_output.txt && chmod +x warningcheck.sh && ./warningcheck.sh && chmod +x errorcheck.sh && ./errorcheck.sh
+        run: cppcheck *.cpp --enable=all --output-file=cppcheck_output.txt && chmod +x tests/warningcheck.sh && ./tests/warningcheck.sh && chmod +x errorcheck.sh && ./tests/errorcheck.sh
       - name: Upload Cppcheck result 
         uses: actions/upload-artifact@v2  
         with:
@@ -22,4 +22,4 @@ jobs:
       - name: Valgrind check
         run: valgrind --leak-check=full --error-exitcode=1 ./a.out units/Player_1_Kakarott.json units/Player_2_Sally.json 
       - name: In-out tests
-        run: chmod +x task2.sh && ./task2.sh
+        run: chmod +x tests/task2.sh && ./tests/task2.sh
