--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -18,7 +18,7 @@ jobs:
           name: cppcheck_output
           path: cppcheck_output.txt
       - name: build
-        run: g++ -Wall -Werror -Wextra -std=c++17 *.cpp 
+        run: g++-8 -Wall -Werror -Wextra -std=c++17 *.cpp 
       - name: Valgrind check
         run: valgrind --leak-check=full --error-exitcode=1 ./a.out units/Player_1_Kakarott.json units/Player_2_Sally.json 
       - name: In-out tests
