--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install cppcheck and valgrind
-        run: sudo apt install -y cppcheck && sudo apt install -y valgrind && sudo apt install -y gcc g++
+        run: sudo apt install -y cppcheck && sudo apt install -y valgrind 
       - name: Running code analysis with cppcheck
         run: cppcheck *.cpp --enable=all --output-file=cppcheck_output.txt && chmod +x tests/warningcheck.sh && ./tests/warningcheck.sh && chmod +x tests/errorcheck.sh && ./tests/errorcheck.sh
       - name: Upload Cppcheck result 
