Changed g++ translation to g++8 version in task2_workflow.yml

--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -8,12 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Update gcc/g++ version manually
-        run: sudo apt-get install gcc-8 g++-8
-      - name: Set update to auto mode
-        run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 0 --slave /usr/bin/g++ g++ /usr/bin/g++-8
       - name: Build the program
-        run: g++ -std=c++17 *.cpp
+        run: g++-8 -std=c++17 *.cpp
       - name: Run task2 shell script
         run: ./tests/task2.sh
       - name: Compare native_output.txt with units/good_output.txt
