--- a/.github/workflows/task2_workflow.yml
+++ b/.github/workflows/task2_workflow.yml
@@ -7,10 +7,10 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      # - name: Build the program
-        # run: g++-8 -std=c++17 *.cpp
-      # - name: Run task2 shell script
-        # run: ./tests/task2.sh
+      - uses: actions/checkout@v2
+      - name: Build the program
+        run: g++-8 -std=c++17 *.cpp
+      - name: Run task2 shell script
+        run: ./tests/task2.sh
       # - name: Compare native_output.txt with units/good_output.txt
         # run: diff native_output.txt units/good_output.txt
