--- a/.github/workflows/Levelup_Test.yml
+++ b/.github/workflows/Levelup_Test.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Valgrind check
         run: valgrind --leak-check=full --error-exitcode=1 ./a.out scenarios/scenario1.json
       - name: In-out tests
-        run: chmod +x tests/task2.sh && ./tests/task2.sh
+        run: io-diff-tests
