--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -12,9 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - run: sudo apt-get install doxygen
-    - run: sudo apt-get install graphviz
-    - run: doxygen doxconf
+    - run: make install_dependencies
+    - run: make doc
 
     - name: Push git subdir as branch
       uses: s0/git-publish-subdir-action@v2.4.0
