--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,4 +1,4 @@
-name: Static code analysis
+name: build, static code analysis, leakcheck
 
 on:
   push
@@ -9,17 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install cppcheck and valgrind
-        run: sudo apt install -y cppcheck && sudo apt install -y valgrind 
+        run: make install_dependencies
       - name: Running code analysis with cppcheck
-        run: cppcheck *.cpp --enable=all --output-file=cppcheck_output.txt && chmod +x tests/warningcheck.sh && ./tests/warningcheck.sh && chmod +x tests/errorcheck.sh && ./tests/errorcheck.sh
+        run: make static_code_analysis
       - name: Upload Cppcheck result 
         uses: actions/upload-artifact@v2  
         with:
           name: cppcheck_output
           path: cppcheck_output.txt
       - name: build
-        run: g++-9 -Wall -Werror -Wextra -std=c++17 *.cpp 
+        run: make build
       - name: Valgrind check
-        run: valgrind --leak-check=full --error-exitcode=1 ./a.out scenarios/scenario1.json
+        run: make leakcheck
       - name: In-out tests
         run: make io-diff-tests
