--- a/units/CMakeLists.txt
+++ b/units/CMakeLists.txt
@@ -18,6 +18,6 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 # Link runTests with what we want to test
 # and the GTest and pthread library
-add_library(functions ../JsonParser.cpp)
-add_executable(runTests ../tests/unit_test.cpp)
+add_library(functions ../Character.cpp ../JsonParser.cpp)
+add_executable(runTests unit_tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
