--- a/.github/workflows/gtestsflow.yml
+++ b/.github/workflows/gtestsflow.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the program
-        run: g++-9 -std=c++17 *.cpp
+        run: g++ -std=c++17 *.cpp
       - name: Run gtests shell script
         run: chmod +x tests/gtests.sh && ./tests/gtests.sh
