--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install cppcheck and valgrind
-        run: make install_dependencies
+        run: sudo apt install -y cppcheck && sudo apt install -y valgrind && sudo apt install -y gcc g++ 
       - name: Running code analysis with cppcheck
         run: make static_code_analysis
       - name: Upload Cppcheck result 
