--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,17 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
 
-# For old gcc and cmake only
-#macro(use_cxx11)
-	#if (CMAKE_VERSION VERSION_LESS "3.1")
-		#if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-			#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
-		#endif ()
-	#else ()
-		#set (CMAKE_CXX_STANDARD 11)
-	#endif()
-#endmacro(use_cxx11)
-#use_cxx11()
-
 # Locate GTest
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
@@ -22,3 +10,6 @@ add_library(functions ../Monster.cpp ../JSON.cpp)
 add_executable(runTests unit_tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
 target_compile_features(runTests PRIVATE cxx_std_17)
+set_property(runTests unit_tests.cpp PROPERTY CXX_STANDARD 17)
+set_property(runTests unit_tests.cpp PROPERTY CXX_STANDARD_REQUIRED ON)
+
