Define c++17 standard in CMakeLists.txt #3

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,6 @@ add_library(functions ../Monster.cpp ../JSON.cpp)
 add_executable(runTests unit_tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
 target_compile_features(runTests PRIVATE cxx_std_17)
-set_property(TARGET unit_tests.cpp PROPERTY CXX_STANDARD 17)
-set_property(TARGET unit_tests.cpp PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET runTests PROPERTY CXX_STANDARD 17)
+set_property(TARGET runTests PROPERTY CXX_STANDARD_REQUIRED ON)
 
