--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,11 +6,13 @@ project(SZE-MOSZE-2020-Git-egylet)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
+set(CMAKE_CXX_STANDARD 17)
+
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Link runTests with what we want to test
 # and the GTest and pthread library
 add_library(functions ../Monster.cpp ../JSON.cpp)
 add_executable(runTests unit_tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
-set_property(TARGET runTests PROPERTY CXX_STANDARD 17)
-set_property(TARGET runTests PROPERTY CXX_STANDARD_REQUIRED ON)
 
