--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 # Link runTests with what we want to test
 # and the GTest and pthread library
 
+add_library(functions ../Monster.cpp ../JSON.cpp)
 add_executable( runTests unit_tests.cpp )
 target_link_libraries(runTests gtest gtest_main pthread)
 target_compile_features(runTests PRIVATE cxx_std_17)
