--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 add_library(functions ../Monster.cpp ../JSON.cpp)
 add_executable( runTests unit_tests.cpp )
-target_link_libraries(runTests gtest gtest_main pthread)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
 target_compile_features(runTests PRIVATE cxx_std_17)
 
 
