--- a/.github/workflows/Newtest.yml
+++ b/.github/workflows/Newtest.yml
@@ -7,6 +7,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: sudo apt install libgtest-dev && sudo apt install cmake && cd /usr/src/gtest && sudo cmake . && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
-      - name: run unit tests
+      - name: cmake
+        run: make build_unittest
+      - name: Run unit test
         run: make run_unittest
+  
+
+  
       
