--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -6,10 +6,9 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    container: vasbeton/test_image:latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install cppcheck and valgrind
-        run: sudo apt install -y cppcheck && sudo apt install -y valgrind && sudo apt install -y gcc g++ 
       - name: Running code analysis with cppcheck
         run: make static_code_analysis
       - name: Upload Cppcheck result 
