--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -7,11 +7,9 @@ jobs:
   deploy:
     name: Deploy to github pages
     runs-on: ubuntu-latest
+    container: vasbeton/doc_image:latest
     steps:
     - uses: actions/checkout@v2
-
-    - run: sudo apt install doxygen && sudo apt install graphviz
-    - run: make doc
 
     - name: Push git subdir as branch
       uses: s0/git-publish-subdir-action@v2.4.0
