--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -10,7 +10,7 @@ jobs:
     container: vasbeton/doc_image:latest
     steps:
     - uses: actions/checkout@v2
-
+    - run: make doc
     - name: Push git subdir as branch
       uses: s0/git-publish-subdir-action@v2.4.0
 
