Unit test typo fix

--- a/.github/workflows/Newtest.yml
+++ b/.github/workflows/Newtest.yml
@@ -6,7 +6,7 @@ jobs:
     container: vasbeton/unittest_image:latest
     steps:
       - uses: actions/checkout@v2
-        run: cd /usr/src/gtest && sudo cmake . && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
+      - run: cd /usr/src/gtest && sudo cmake . && sudo make && sudo cp *.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
       - name: cmake
         run: make build_unittest
       - name: Run unit test
