--- a/.github/workflows/Newtest.yml
+++ b/.github/workflows/Newtest.yml
@@ -2,7 +2,7 @@ name: Unit tests
 on: push
 jobs:
   build_and_test:
-    runs-on: ubuntu:20.04
+    runs-on: ubuntu-20.04
     container: vasbeton/unittest_image:latest
     steps:
       - uses: actions/checkout@v2
