--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu:20.04
+    runs-on: ubuntu-20.04
     container: vasbeton/test_image:latest
     steps:
       - uses: actions/checkout@v2
