--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 # Link runTests with what we want to test
 # and the GTest and pthread library
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-add_library(functions ../Monster.cpp ../Hero.cpp ../JSON.cpp ../Map.cpp ../Damage.cpp)
+add_library(functions ../Monster.cpp ../Hero.cpp ../JSON.cpp ../Map.cpp ../Damage.cpp ../Game.cpp)
 add_executable(runTests unit_tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
 target_compile_features(runTests PRIVATE cxx_std_17)
