Add Damage, Hero, JSON, Map tests to Makefile and Unit test workflow

--- a/.github/workflows/Unit_tests.yml
+++ b/.github/workflows/Unit_tests.yml
@@ -10,7 +10,23 @@ jobs:
         run: make build_monster_unittest
       - name: Run monster tests
         run: make run_monster_unittest
- 
+       - name: Build damage tests
+        run: make build_damage_unittest
+      - name: Run damage tests
+        run: make run_damage_unittest
+      - name: Build map tests
+        run: make build_map_unittest
+      - name: Run map tests
+        run: make run_map_unittest
+       - name: Build json tests
+        run: make build_json_unittest
+      - name: Run json tests
+        run: make run_json_unittest
+       - name: Build hero tests
+        run: make build_hero_unittest
+      - name: Run hero tests
+        run: make run_hero_unittest
+  
 
   
       
