--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,6 @@ include_directories(${GTEST_INCLUDE_DIRS})
 # and the GTest and pthread library
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 add_library(functions ../Monster.cpp ../Hero.cpp ../JSON.cpp ../Map.cpp ../Damage.cpp ../Game.cpp)
-add_executable(runTests unit_tests.cpp)
+add_executable(runTests unit_tests_monster.cpp unit_tests_2.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread functions)
 target_compile_features(runTests PRIVATE cxx_std_17)
